# ChessEngine

./: .gitignore  CMakeLists.txt  ChessEngine.sln  ChessEngine.vcxproj  Locations.cpp  Locations.h  MagicBitboards.h  Perft.cpp  Player.cpp  Todo.txt  main.cpp
Generate Magic Bitboards/: Square.h  magic_numbers-LAPTOP-D6F6K698  magic_numbers.txt
PerftTest/: PerftTest.vcxproj
UnitTest/: UnitTest.cpp  UnitTest.vcxproj.filters
src/: BitBoards.h  ChessEngine.sln  ChessEngine.vcxproj  ChessEngine.vcxproj.filters  Engine.cpp  Engine.h  Evaluate.cpp  Evaluate.h  GameMode.cpp  GameMode.h  GameOutcomes.cpp  GameOutcomes.h  HistoryTable.cpp  HistoryTable.h  Locations.h  MagicBitboards.cpp  MagicBitboards.h  MakeMoves.cpp  MakeMoves.h  Moves.cpp  Moves.h  Perft.cpp  Perft.h  PieceSquareTables.h  PieceTypes.h  Pin.h  Player.h  Position.cpp  Position.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  Zobrist.cpp  Zobrist.h  main.cpp
src/EvaluationNetwork/: EvaluationNetwork.vcxproj  EvaluationNetwork.vcxproj.filters
src/EvaluationNetwork/Evaluate/: Accumulator.cpp  Accumulator.h  ClippedReLU.cpp  ClippedReLU.h  Conversor.cpp  Conversor.h  EvaluateNNUE.cpp  EvaluateNNUE.h  InputNNUE.cpp  InputNNUE.h  LinearLayer.cpp  LinearLayer.h  LoadWeights.h
src/EvaluationNetwork/GenerateData/: InputNNUE.h  main.cpp
src/EvaluationNetwork/Train/: save_weights.py  test_model.py  (+2 more)
src/Generate Magic Bitboards/: Find Magic Bitboards.vcxproj  Find Magic Bitboards.vcxproj.filters  Serializer.cpp  Serializer.h  main.cpp
src/MagicBitboards/: CMakeLists.txt  Serializer.cpp  Serializer.h  Square.h
src/nnue/: CMakeLists.txt
tests/: CMakeLists.txt
tests/EngineTest/: EngineTest.vcxproj  EngineTest.vcxproj.filters  main.cpp  tester.py
tests/NNUETest/: NNUETest.vcxproj  main.cpp
tests/PerftTest/: PerftTest.vcxproj  PerftTest.vcxproj.filters  main.cpp  perftsuite.epd
tests/UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  perftsuite.epd
(+9 files in other folders)
